# oresat-prucam-ar013x

./: .clang-format  .gitignore  README.md  img.buf  makedeb.sh  makepkg.sh  prucam.service  prucam.sh  setup.py
.github/workflows/: build_tests.yml
debian/: changelog  control  postinst  prerm  prucam-ar013x-dkms.dkms  prucam-ar013x-dkms.install  prucam-ar013x-dkms.postinst  prucam-ar013x-dkms.postint  prucam-ar013x-dkms.prerm  prucam-dkms.dkms  prucam-dkms.install  prucam-dkms.postinst  prucam-dkms.prerm  rules
device_tree_overlay/: Makefile  README.md  prudev-00A0.dts
docs/: Doxyfile
kernel_module/: Makefile  README.md  ar013x_regs.h  ar013x_sysfs.c  ar013x_sysfs.h  cam_gpio.c  cam_gpio.h  cam_i2c.h  prucam_main.c
kernel_module/debian/: changelog  control  postinst  prerm  prucam-dkms.dkms  prucam-dkms.install  rules
kernel_module/src/: Makefile  ar0130_ctrl_regs.h  ar0134_ctrl_regs.h  cam_gpio.c  cam_gpio.h  cam_i2c.c  cam_i2c.h  configs.h  prucam.c  prucam_main.c
pru_code/: AM335x_PRU.cmd  Makefile  deploy.sh  pru0_asm.s  pru0_fw.c  pru1_asm.s  pru1_fw.c
python-prucam/: .gitignore  build_oresat_pkg.sh  setup.cfg  setup.py
python-prucam/prucam/: __init__.py  camera.py
python-prucam/src/prucam/: __init__.py  camera.py  pru.py
python-prucam/tests/: test_camera.py  test_pru.py
python3-prucam/: README.md  build_oresat_pkg.sh
python3-prucam/examples/: example1.py
python3-prucam/tests/: test_camera.py
python3_lib/: README.md  setup.py  stdeb.cfg
python3_lib/prucam/: __init__.py
src/device_tree_overlay/: cfc-00A0.dts  (+2 more)
testing/: camera_test.py
(+81 files in other folders)
