[bdist_wheel]
universal = 0

[metadata]
name = prucam
version = 0.0.1
license = GPLv3
license_file = ../LICENSE
description = A quick library to interface with prucam.
long_description = file: README.md
author = Ryan Medick
author_email = rmedick@pdx.edu
maintainer = Ryan Medick
maintainer_email = rmedick@pdx.edu
url = https://github.com/oresat/oresat-linux-prucam
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:

install_requires=
    pillow>=5.4.1

python_requires = >=3.7

[options.packages.find]
where = prucam
